--- a/climateuncertaintyspilloverbook/sec2_UncertainClimateDynamics.ipynb
+++ b/climateuncertaintyspilloverbook/sec2_UncertainClimateDynamics.ipynb
@@ -22,7 +22,7 @@
    "execution_count": 2,
    "metadata": {
     "tags": [
-     "hidecode"
+     "hide-input"
     ]
    },
    "outputs": [
@@ -472,7 +472,7 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Edit Metadata",
+  "celltoolbar": "Tags",
   "interpreter": {
    "hash": "d0d76abfdbb0076f7950f4feef2921e737fada20a629e84883a54ca9388c8f4e"
   },
