--- a/climateuncertaintyspilloverbook/sec4_IllustrativeEconIa.ipynb
+++ b/climateuncertaintyspilloverbook/sec4_IllustrativeEconIa.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "## 4.1 HJB equations and robustness\n",
     "\n",
-    "The uncertainty that we consider has a single jump point after which the damage function uncertainty is revealed.  This leads us to compute continuation value functions conditioned on each of the damage function specifications.  These continuation value functions then are used to summarize post-jump outcomes when we compute the initial value function.  We describe the Hamilton-Jacobi-Bellman (HJB) equations for each of these steps in what follows. The computational methods are described in the [appendix](appendices.ipynb).\n",
+    "The uncertainty that we consider has a single jump point after which the damage function uncertainty is revealed.  This leads us to compute continuation value functions conditioned on each of the damage function specifications.  These continuation value functions then are used to summarize post-jump outcomes when we compute the initial value function.  We describe the Hamilton-Jacobi-Bellman (HJB) equations for each of these steps in what follows. The computational methods are described in the [appendix](appendixB.ipynb).\n",
     "\n",
     "\n",
     "The parameter values are as follows:\n",
@@ -273,7 +273,10 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "hide-input"
+    ]
    },
    "outputs": [
     {
@@ -1916,7 +1919,10 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "hide-input"
+    ]
    },
    "outputs": [
     {
@@ -2425,7 +2431,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -13544,7 +13554,11 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -14017,7 +14031,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -14700,7 +14718,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -15162,7 +15184,11 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -15897,7 +15923,10 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "hide-input"
+    ]
    },
    "outputs": [
     {
@@ -22005,7 +22034,11 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -23929,7 +23962,11 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -27196,6 +27233,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
