--- a/climateuncertaintyspilloverbook/sec6_IllustrativeEconIII.ipynb
+++ b/climateuncertaintyspilloverbook/sec6_IllustrativeEconIII.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# 6 Illustrative economy III: carbon abatement technology\n",
     "\n",
-    "While the model posed in section [4](sec4_IllustrativeEconI.ipynb) illustrated how the unfolding of damages should alter policy, the economic model was not designed to confront transitions to fully carbon-neutral economies.  There have been several calls for such transitions with little regard for the role or impact of uncertainty.  We now modify the model to allow for green technology in decades to come.  \n",
+    "While the model posed in [section 4a](sec4_IllustrativeEconIa.ipynb) illustrated how the unfolding of damages should alter policy, the economic model was not designed to confront transitions to fully carbon-neutral economies.  There have been several calls for such transitions with little regard for the role or impact of uncertainty.  We now modify the model to allow for green technology in decades to come.  \n",
     "\n",
     "We next consider a technology that is close to the Dynamic Integrated Climate-Economy (DICE) model  of {cite:t}`Nordhaus:2017`. See also {cite:t}`CaiJuddLontzek:2017` and {cite:t}`CaiLontzek:2019` for a stochastic extension (DSICE)  of the DICE model. [^ref3]\n",
     "\n",
@@ -133,13 +132,12 @@
     "$$\n",
     "  \\xi_r \\mathcal{I}_g  \\sum \\pi_d^m (1 - g_m + g_m  \\log(g_m) ) + \\mathcal{I}_g\\sum g_m \\pi_d^m(\\Phi^{\\text{post tech, m}} - \\Phi^m ).\n",
     "$$"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -151,27 +149,27 @@
     "πd_o = np.ones_like(γ_3) / len(γ_3)\n",
     "θ = pd.read_csv('data/model144.csv', header=None).to_numpy()[:, 0]/1000.\n",
     "πc_o = np.ones_like(θ) / len(θ)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
    "source": [
     "#!python \"model_final_5.py\"\n",
     "#!python \"model_final_7p5.py\"\n",
     "#!python \"model_final_2p5.py\"\n",
     "#!python \"model_final_baseline.py\""
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "gt_tech_2p5 = np.load('new_gt_tech_2p5.npy')\n",
     "gt_tech_5 = np.load('new_gt_tech_5.npy')\n",
@@ -193,13 +191,13 @@
     "\n",
     "πct = np.load(\"πct.npy\")\n",
     "distorted_damage_probs = np.load(\"distorted_damage_probs.npy\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "distorted_tech_intensity_first_2p5 = gt_tech_2p5 * 1/arrival\n",
     "distorted_tech_intensity_first_5 = gt_tech_5 * 1/arrival\n",
@@ -230,16 +228,24 @@
     "distorted_dmg_prob_5 = 1 - np.exp(-np.cumsum(np.insert(distorted_dmg_intensity_5, 0, 0)))[:-1]\n",
     "distorted_dmg_prob_7p5 = 1 - np.exp(-np.cumsum(np.insert(distorted_dmg_intensity_7p5, 0, 0)))[:-1]\n",
     "dmg_prob = 1 - np.exp(-np.cumsum(np.insert(intensity_dmg_baseline, 0, 0)))[:-1]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "scrolled": false
-   },
+   "source": [
+    "from src.plots import plot14\n",
+    "plot14(\n",
+    "    tech_prob_first, distorted_tech_prob_first_7p5, distorted_tech_prob_first_5,distorted_tech_prob_first_2p5,\n",
+    "    tech_prob_second, distorted_tech_prob_second_7p5, distorted_tech_prob_second_5, distorted_tech_prob_second_2p5,\n",
+    "    dmg_prob, distorted_dmg_prob_7p5, distorted_dmg_prob_5, distorted_dmg_prob_2p5\n",
+    ")\n"
+   ],
    "outputs": [
     {
+     "output_type": "display_data",
      "data": {
       "text/html": [
        "        <script type=\"text/javascript\">\n",
@@ -318,11 +324,14 @@
        "        "
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "metadata": {}
     },
     {
+     "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fa6f7b7b130>"
+      ],
       "text/html": [
        "\n",
        "        <iframe\n",
@@ -333,39 +342,40 @@
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fa6f7b7b130>"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
-   "source": [
-    "from src.plots import plot14\n",
-    "plot14(\n",
-    "    tech_prob_first, distorted_tech_prob_first_7p5, distorted_tech_prob_first_5,distorted_tech_prob_first_2p5,\n",
-    "    tech_prob_second, distorted_tech_prob_second_7p5, distorted_tech_prob_second_5, distorted_tech_prob_second_2p5,\n",
-    "    dmg_prob, distorted_dmg_prob_7p5, distorted_dmg_prob_5, distorted_dmg_prob_2p5\n",
-    ")\n"
-   ]
+   "metadata": {
+    "scrolled": false,
+    "tags": [
+     "hide-input"
+    ]
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "The simulation uses the planner's optimal solution. The left panel shows the distorted jump probabilities for the first technology jump.  The middle panel shows the distorted jump probabilities for the second technology jump. The right panel shows the distorted jump probabilities for the damage function curvature jump. The baseline probabilities for the right panel are computed using the state-dependent intensities when we set $\\xi_a = \\xi_r = \\infty.$"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "source": [
+    "from src.plots import plot15\n",
+    "plot15(θ, γ_3, distorted_damage_probs, πct)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fa6f7b7b850>"
+      ],
       "text/html": [
        "\n",
        "        <iframe\n",
@@ -376,37 +386,35 @@
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fa6f7b7b850>"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
-   "source": [
-    "from src.plots import plot15\n",
-    "plot15(θ, γ_3, distorted_damage_probs, πct)"
-   ]
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Figure 15 reports the probability distortions for the damage function and climate sensitivity models. Here, we have imposed $\\xi_a = .02$ and $\\xi_r = 5.0$. Note that the damage function probability distortions are relatively modest, consistent with our previous discussion.   The climate model distortions, by design, are of similar magnitude as those reported previously in Figure 5."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
