--- a/appendixA.ipynb
+++ b/appendixA.ipynb
@@ -5,7 +5,7 @@
    "id": "192a96a2",
    "metadata": {},
    "source": [
-    "# A.  Complete model\n",
+    "# Appendix A.  Complete model\n",
     "\n",
     "## A.1 Description\n",
     "Suppose the value function is $V$. State variable: $x = (\\log k, z, y, n)$  (realization of $\\log K, \\log N, Y, Z$), control variable : $(\\tilde e, i)$.\n",
