--- a/appendixB.ipynb
+++ b/appendixB.ipynb
@@ -5,7 +5,7 @@
    "id": "6d903a0e",
    "metadata": {},
    "source": [
-    "#  B. Computation methods\n",
+    "#  Appendix B. Computation methods\n",
     "\n",
     "\n",
     "The HJB for $(y, n)$ component does not has a straightforward solution.\n",
