--- a/sec4_IllustrativeEconIb.ipynb
+++ b/sec4_IllustrativeEconIb.ipynb
@@ -5,37 +5,19 @@
    "id": "2ab603fa",
    "metadata": {},
    "source": [
-    "# 4B Illustrative economy Ib: smooth ambiguity\n",
+    "## 4.3 Smooth ambiguity\n",
     "\n",
     "\n",
     "This notebook is to suppliment discussion in [Section 4](sec4_IllustrativeEconI.ipynb) by focusing on a different aspect -- impact of smooth ambiguity.\n",
     "\n",
     "The same with [Section 4](sec4_IllustrativeEconI.ipynb), the penalty paramters are $\\xi_a$ and $\\xi_r$. \n",
     "\n",
-    "Without specifically pointed out, $\\xi_r = 1$ in this example. And the smooth ambiguity parameter $\\xi_a$ values we experiment with are $\\{0.02, 0.01, 0.005, 0.0025\\}$.\n",
-    "\n",
-    "## 4B.1 Post-jump continuation value functions\n",
-    "\n",
-    "\n",
-    "Conditioned on each of the damage functions, $m = 1, 2, \\dots, 20$. Solve for the corresponding $\\phi_m(y)$:\n",
-    "\n",
-    "\n",
-    "$$\n",
-    "\\begin{align*}\n",
-    "0 = \\max_{\\tilde e}  \\min_h \\min_{\\omega_j, \\sum_{\\ell =1}^L \\omega_\\ell  = 1}\n",
-    "& - \\delta \\phi_m(y)    +  \\eta \\log \\tilde e    \\cr\n",
-    "& + \\frac {d \\phi_m(y)}{d y} {\\tilde e}  \\varsigma \\cdot h  + {\\frac {(\\eta - 1)} \\delta }\\left[\\gamma_1 +  \\gamma_2 y + \\gamma_3^m (y- {\\overline y} ) \\right] {\\tilde e} \\varsigma \\cdot h + {\\frac {\\xi_r} 2} h'h \\cr \n",
-    "& + \\frac {d \\phi_m(y)}{d y}  \\sum_{\\ell=1}^L \\omega_\\ell  \\theta_\\ell {\\tilde e} + {\\frac 1 2} \\frac {d^2 \\phi_m(y)}{(dy)^2} |\\varsigma|^2 \\tilde e^2  \\cr\n",
-    "&+ {\\frac {(\\eta - 1)} \\delta}  \\left( \\left[ \\gamma_1 + \\gamma_2 y + \\gamma_3^m (y - \\overline y) \\right]   \\sum_{\\ell=1}^L \\omega_\\ell \\theta_\\ell {\\tilde e} + {\\frac 1 2} (\\gamma_2 + \n",
-    "\\gamma_3^m) |\\varsigma|^2 \\tilde e^2 \\right) \\cr\n",
-    "&+ \\xi_a \\sum_{\\ell = 1}^L \\omega_\\ell \\left( \\log \\omega_\\ell - \\log \\pi_\\ell \\right).\n",
-    "\\end{align*}\n",
-    "$$"
+    "Without specifically pointed out, $\\xi_r = 1$ in this example. And the smooth ambiguity parameter $\\xi_a$ values we experiment with are $\\{0.02, 0.01, 0.005, 0.0025\\}$.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "8d7998b5",
    "metadata": {},
    "outputs": [
@@ -203,42 +185,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5f584a61",
-   "metadata": {},
-   "source": [
-    "## 4B Pre-jump value function\n",
-    "\n",
-    "The pre-jump value function has a similar structure with two exceptions:\n",
-    "  -  we include the intensity function discussed earlier and \n",
-    "  -  we introduce robustness concerns for both the \n",
-    "intensity and distribution over the alternative $\\gamma_3^m$ coefficients.  \n",
-    "\n",
-    "Given these modifications, we include:\n",
-    "\n",
-    "\n",
-    "$$\n",
-    "\\mathcal J (y) \\sum_{m=1}^M g_m \\pi_m \\left[ \\phi_m(\\overline y) - \\phi(y) \\right]\n",
-    "+ \\xi_r {\\mathcal J}(y)  \\sum_{m=1}^M \\pi_m \\left( 1 - g_m + g_m \\log g_m \\right)\\pi_m \n",
-    "$$\n",
-    "\n",
-    "in the HJB and solve for pre-jump value function $\\phi(y)$ on $[0, \\overline{y}]$:\n",
-    "\n",
-    "$$\n",
-    "\\begin{align*}\n",
-    "0 = \\max_{\\tilde e}  \\min_h \\min_{\\omega_j, \\sum_{\\ell =1}^L \\omega_\\ell  = 1} \\min_{g_m \\geqslant 0}\n",
-    "& - \\delta \\phi(y)    +  \\eta \\log \\tilde e    \\cr\n",
-    "& + \\frac {d \\phi(y)}{d y} {\\tilde e}  \\varsigma \\cdot h  + {\\frac {(\\eta - 1)} \\delta }\\left[\\gamma_1 +  \\gamma_2 y) \\right] {\\tilde e} \\varsigma \\cdot h + {\\frac {\\xi_r} 2} h'h \\cr \n",
-    "& + \\frac {d \\phi(y)}{d y}  \\sum_{\\ell=1}^L \\omega_\\ell  \\theta_\\ell {\\tilde e} + {\\frac 1 2} \\frac {d^2 \\phi(y)}{(dy)^2} |\\varsigma|^2 \\tilde e^2  \\cr\n",
-    "&+ {\\frac {(\\eta - 1)} \\delta}  \\left( \\left[ \\gamma_1 + \\gamma_2 y\\right]   \\sum_{\\ell=1}^L \\omega_\\ell \\theta_\\ell {\\tilde e} + {\\frac 1 2} \\gamma_2  |\\varsigma|^2 \\tilde e^2 \\right) \\cr\n",
-    "&+ \\xi_a \\sum_{\\ell = 1}^L \\omega_\\ell \\left( \\log \\omega_\\ell - \\log \\pi_\\ell \\right)\\cr\n",
-    "&+ \\mathcal J (y) \\sum_{m=1}^M g_m \\pi_m \\left[ \\phi_m(\\overline y) - \\phi(y) \\right]\n",
-    "+ \\xi_r {\\mathcal J}(y)  \\sum_{m=1}^M \\pi_m \\left( 1 - g_m + g_m \\log g_m \\right)\\pi_m \n",
-    "\\end{align*}\n",
-    "$$"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "27bf4763",
@@ -310,7 +256,7 @@
    "id": "d0e2e703",
    "metadata": {},
    "source": [
-    "## 4B.3 Emission and $\\log SCC$ as a function of temperature anomaly"
+    "### Emission and $\\log SCC$ as a function of temperature anomaly"
    ]
   },
   {
@@ -1251,7 +1197,7 @@
    "id": "68a58389",
    "metadata": {},
    "source": [
-    "## 4B.4 Emission and logarithm of social cost of carbon trajectories\n",
+    "### Emission and logarithm of social cost of carbon trajectories\n",
     "\n",
     "The figure shows emission and $\\log SCC$ over time before temperature anomaly reaches the upper bound of jump threshold, 2$^o C$.\n"
    ]
