--- a/sec6_IllustrativeEconIII.ipynb
+++ b/sec6_IllustrativeEconIII.ipynb
@@ -2269,9 +2269,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "macro-ann",
+   "display_name": "py38",
    "language": "python",
-   "name": "macro-ann"
+   "name": "py38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2283,7 +2283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
